# uw-pretrade-brief

./: .gitignore  CLAUDE.md  FUTURE_WORK.md  LICENSE  MEMORY.md  README.md  app.py  kee.txt  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-05-25T23-34-31-767Z.yml  page-2026-05-25T23-38-56-057Z.yml  page-2026-05-25T23-43-25-470Z.yml
.streamlit/: config.toml  secrets.toml.example
docs/superpowers/plans/: 2026-05-23-pre-trade-brief.md
docs/superpowers/specs/: 2026-05-23-pre-trade-brief-design.md
scripts/: probe_uw.py  record_fixtures.py  sync_requirements.sh
src/: badge_help.py  charts.py  fetch.py  patterns.py  synth.py  uw_client.py  watchlist.py
src/views/: scan_table.py  ticker_card.py
tests/: conftest.py  test_charts.py  test_live_schema.py  test_patterns.py  test_percentile.py  test_synth.py  test_uw_client.py  test_watchlist.py
tests/fixtures/: uw_darkpool_SPY.json  uw_flow_alerts_SPY.json  uw_hot_today.json  uw_interpolated_iv_SPY.json  uw_max_pain_SPY.json  uw_oi_strike_SPY.json  uw_option_contracts_SPY.json  uw_spot_exposures_strike_SPY.json  uw_volatility_SPY.json
