[project]
name = "uw-pretrade-brief"
version = "0.1.0"
description = "Weekly options decision-support dashboard using Unusual Whales data + Gemini synthesis"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.35.0",
    "requests>=2.31.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "google-genai>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits real UW/Gemini APIs; skipped by default",
]
